// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Style objects should match the snapshot 1`] = `
Object {
  "display": "grid",
  "gridTemplateColumns": "repeat(12, 1fr)",
  "width": "100%",
}
`;

exports[`Style objects should match the snapshot 2`] = `
Object {
  "alignItems": "center",
  "display": "grid",
  "gridTemplateColumns": "repeat(12, 1fr)",
  "width": "100%",
}
`;

exports[`Style objects should match the snapshot 3`] = `
Object {
  "alignItems": "baseline",
  "display": "grid",
  "gap": 2,
  "gridTemplateColumns": "repeat(12, 1fr)",
  "mb": 4,
  "width": "100%",
}
`;
